--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^7.4 || ^8.0",
     "typo3/cms-core": "^10.4 || ^11.5 || ^12.4"
   },
   "autoload": {
